# nativescript-mason

./: .gitignore  .prettierignore  .travis.yml  Cargo.toml  Makefile  README.md  migrations.json  nx.json  package-lock.json  package.json  references.d.ts  tsconfig.base.json  workspace.json
apps/: common.ts  grid-area-reference.html  showcase-reference.html  test.html  transform-demo.html
apps/demo/: package.json  project.json  tsconfig.json  webpack.config.js
apps/demo-angular/: .detoxrc.js  .eslintrc.json  .gitignore  nativescript.config.ts  package-lock.json  package.json  project.json  references.d.ts  tsconfig.json
apps/demo-angular/e2e/: all.test.js  failing.test.js  screenshots.js
apps/demo-angular/scripts/: patch-platform-android.js
apps/demo-angular/src/: app-routing.module.ts  app.module.ts  home.component.html  home.component.ts  main.ts
apps/demo-angular/src/plugin-demos/: nativescript-masonkit.component.html  nativescript-masonkit.component.ts  nativescript-masonkit.module.ts
apps/demo-vue/: nativescript.config.ts  package-lock.json  package.json  project.json  references.d.ts  tailwind.config.js  tsconfig.json  webpack.config.js
apps/demo-vue/app/: app.css  app.ts
apps/demo-vue/app/components/: Home.vue
apps/demo-vue/app/plugin-demos/: BoxShadowDemo.vue  FlexboxDemo.vue  Grid-Area.vue  Grid.vue  GridDemo.vue  ShowcaseDemo.vue  SpacingDemo.vue  TransformDemo.vue  TypographyDemo.vue  nativescript-masonkit.vue
apps/demo-vue/patches/: @nativescript+tailwind+2.1.1.patch  @nativescript+tailwind+4.0.7.patch
apps/demo/src/: app-root.xml  app.scss  app.ts  main-page.xml  test.ts
apps/demo/src/plugin-demos/: nativescript-masonkit.ts  nativescript-masonkit.xml
crates/mason-android/: .gitignore  Cargo.toml  cbindgen.toml
crates/mason-android/src/: lib.rs  node.rs  style.rs
crates/mason-c/: Cargo.toml  cbindgen.toml
crates/mason-c/src/: ffi.rs  lib.rs  node.rs  style.rs  util.rs
crates/mason-core/: Cargo.toml
crates/mason-core/src/: inline.rs  lib.rs  node.rs  style.rs  tree.rs  tree_inline.rs  utils.rs
crates/mason-core/src/style/: arena.rs  debug.rs  mod.rs  style_guard.rs  utils.rs
crates/mason-core/src/utils/: grid.rs  mod.rs
crates/mason-core/tests/: debug_print_floats.rs  display_modes.rs  flex_grow_shrink.rs  flex_inline_mix.rs  float_basic.rs  float_clear.rs  float_margins.rs  float_stack_clear_margins.rs  grid_basic.rs  inline_more.rs  inline_reflow.rs  measure_output_tagged.rs  writeback_detector.rs
crates/mason-ios/: Cargo.toml  cbindgen.toml
crates/mason-playground/: Cargo.toml
crates/mason-playground/benches/: bench.rs
crates/mason-playground/src/: main.rs
mason-cpp-ios-src/cpp/: MasonV8JSIModule.h  OneByteStringResource.h
tools/: package-settings.json  workspace-scripts.js
tools/assets/App_Resources/Android/: app.gradle  before-plugins.gradle  gradle.properties  settings.gradle
tools/demo/: index.ts  tsconfig.json
tools/demo/nativescript-masonkit/: index.ts
tools/scripts/: build-android.sh  build-headers.sh  build-ios.sh  masonkit-build-android-aar.sh  masonkit-build-ios-framework.sh  masonkit-build-ios-native.sh  masonkit-build.sh
tools/scripts/gentests/: index.js  items.ts  routes.ts
tools/scripts/gentests/taffy_tests/: align_baseline_child_multiline.html  flex_basis_unconstraint_column.html  grid_auto_single_item_fixed_width.html  grid_auto_single_item_fixed_width_with_definite_width.html  grid_out_of_order_items.html  max_height_overrides_height.html  max_height_overrides_height_on_root.html  min_height_overrides_height.html  min_height_overrides_height_on_root.html  min_height_overrides_max_height.html  width_smaller_then_content_with_flex_grow_unconstraint_size.html
tools/scripts/gentests/taffy_tests_with_color/: absolute_layout_align_items_and_justify_content_center.html  absolute_layout_align_items_and_justify_content_center_and_bottom_position.html  absolute_layout_align_items_and_justify_content_center_and_left_position.html  absolute_layout_align_items_and_justify_content_center_and_right_position.html  absolute_layout_align_items_center.html  (+400 more)
(+2 files in other folders)
