[workspace]
members = ["crates/mason-core", "crates/mason-android", "crates/mason-ios", "crates/mason-playground", "crates/mason-c"]
resolver = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
debug = false
incremental = false
strip = true
debug-assertions = false
overflow-checks = false

[workspace.dependencies]
taffy = { git = "https://github.com/DioxusLabs/taffy.git", rev = "fff4ea6e71e4f6ec29d0ea560a77545ad611470a" }
style_atoms = { git = "https://github.com/servo/stylo", rev = "85ae0b1", package = "stylo_atoms" }
