[workspace]
members = ["crates/mason-core", "crates/mason-android", "crates/mason-ios", "crates/mason-playground", "crates/mason-c"]
resolver = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
debug = false
incremental = false
strip = true
debug-assertions = false
overflow-checks = false

[workspace.dependencies]
taffy = { git = "https://github.com/DioxusLabs/taffy.git", rev = "25759dad44d8350743a4e866fee54962f996895a" }
style_atoms = { git = "https://github.com/servo/stylo", rev = "85ae0b1", package = "stylo_atoms" }
