[package]
name = "mason-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "masonnative"
crate-type = ["cdylib", "staticlib"]

[dependencies]
mason-c = { path = "../mason-c" }
mason-core = { path = "../mason-core" }
jni = "0.21.1"
log = "0.4.20"
android_logger = "0.14.1"
once_cell = "1.16.0"
itertools = "0.14.0"
