[package]
name = "mason-core"
version = "0.1.0"
edition = "2021"

[dependencies]
taffy = { git = "https://github.com/DioxusLabs/taffy.git", rev = "f99b57fbad456aa2756b374ff40c876e4b9574c2" }
bitflags = "2.9.0"
log = "0.4.26"
slotmap = "1.0.7"
style_atoms = { git = "https://github.com/servo/stylo", rev = "85ae0b1", package = "stylo_atoms" }
cssparser = "0.36.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
#jni = { git = "https://github.com/jni-rs/jni-rs.git", rev = "1a4a345b1e65aca405e856046ff2661d37edde6d" }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = "0.6.1"
objc2-foundation = { version = "0.3.1", features = ["alloc", "NSData", "block2"] }
objc2-core-foundation = { version = "0.3.1", features = ["CFData"] }
